logs/dag_id=Weather_DAG_V4.4/run_id=scheduled__2024-02-12T034100+0000/task_id=data_to_db/attempt=1.log
[2024-02-12T12:50:55.985+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V4.4.data_to_db scheduled__2024-02-12T03:41:00+00:00 [queued]>
[2024-02-12T12:50:56.027+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V4.4.data_to_db scheduled__2024-02-12T03:41:00+00:00 [queued]>
[2024-02-12T12:50:56.028+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-12T12:50:56.104+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): data_to_db> on 2024-02-12 03:41:00+00:00
[2024-02-12T12:50:56.136+0000] {standard_task_runner.py:60} INFO - Started process 13160 to run task
[2024-02-12T12:50:56.167+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V4.4', 'data_to_db', 'scheduled__2024-02-12T03:41:00+00:00', '--job-id', '8785', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmp71lrek9j']
[2024-02-12T12:50:56.172+0000] {standard_task_runner.py:88} INFO - Job 8785: Subtask data_to_db
[2024-02-12T12:50:56.399+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V4.4.data_to_db scheduled__2024-02-12T03:41:00+00:00 [running]> on host 06573eafe810
[2024-02-12T12:50:56.833+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V4.4' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-12T03:41:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-12T03:41:00+00:00'
[2024-02-12T12:50:56.835+0000] {sql.py:276} INFO - Executing: 
        COPY persons(first_name, last_name, dob, email)
        FROM weather.csv
        DELIMITER ','
        CSV HEADER;
[2024-02-12T12:50:56.852+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:50:56.921+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-12T12:50:56.954+0000] {sql.py:450} INFO - Running statement: 
        COPY persons(first_name, last_name, dob, email)
        FROM weather.csv
        DELIMITER ','
        CSV HEADER;, parameters: None
[2024-02-12T12:50:56.963+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "weather"
LINE 3:         FROM weather.csv
                     ^

[2024-02-12T12:50:56.978+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=Weather_DAG_V4.4, task_id=data_to_db, execution_date=20240212T034100, start_date=20240212T125055, end_date=20240212T125056
[2024-02-12T12:50:57.157+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 8785 for task data_to_db (syntax error at or near "weather"
LINE 3:         FROM weather.csv
                     ^
; 13160)
[2024-02-12T12:50:57.194+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-12T12:50:57.231+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
